# congenial-octo-waddle

./: .bandit  .coveragerc  .dockerignore  .editorconfig  .env.example  .envrc  .flake8  .gitattributes  .gitignore  .isort.cfg  .markdownlint.json  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .yamllint  AUTHORS  CHANGES  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  congenial.toml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: CODEOWNERS  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  label.yml  python.yml  release.yml  stale.yml
components/: helper.py  service.py
docs/: changelog.md  notes.md
examples/: advanced_usage.py  basic_usage.py
scripts/: run.sh  setup.sh  test.sh
services/: handler.py  processor.py  service.py
src/: handler.py  service.py
src/congenial/: __init__.py  cli.py  config.py  constants.py  logger.py  messages.py  utils.py
tests/: __init__.py  test_messages.py
utils/: service.py  utils.py
